<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#D8D4AC"
        android:fontFamily="sans-serif-black"
        android:gravity="end"
        android:text="@string/_0txt"
        android:textAlignment="viewEnd"
        android:textIsSelectable="false"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        >


        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/design_default_color_error"
            android:onClick="functionKeyPress"
            android:text="@string/_clear"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_7"
            app:layout_constraintEnd_toStartOf="@+id/btn_history"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_backspace"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="functionKeyPress"
            android:text="@string/bac"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_9"
            app:layout_constraintEnd_toStartOf="@+id/btn_multiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_history"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_history"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="functionKeyPress"
            android:text="🕐"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_8"
            app:layout_constraintEnd_toStartOf="@+id/btn_backspace"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_clear"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="mathKeyPress"
            android:text="@string/_divide"
            android:textColor="@color/material_dynamic_neutral50"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_9"
            app:layout_constraintTop_toBottomOf="@+id/btn_multiply" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="mathKeyPress"
            android:text="@string/_multiply"
            android:textColor="@color/material_dynamic_neutral50"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_divide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_backspace"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="mathKeyPress"
            android:text="@string/_plus"
            android:textColor="@color/material_dynamic_neutral50"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_6"
            app:layout_constraintTop_toBottomOf="@+id/btn_divide" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="mathKeyPress"
            android:text="@string/_minus"
            android:textColor="@color/material_dynamic_neutral50"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_equal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_3"
            app:layout_constraintTop_toBottomOf="@+id/btn_plus" />

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="mathKeyPress"
            android:text="@string/_equal"
            android:textColor="@color/material_dynamic_neutral50"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_dot"
            app:layout_constraintTop_toBottomOf="@+id/btn_minus" />

        <Button
            android:id="@+id/btn_0"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:onClick="numberKeyPress"
            android:tag="0"
            android:text="@string/_0"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_dot"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_plusminus"
            app:layout_constraintTop_toBottomOf="@+id/btn_2" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:onClick="numberKeyPress"
            android:tag="1"
            android:text="@string/_1"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_plusminus"
            app:layout_constraintEnd_toStartOf="@+id/btn_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_4" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:onClick="numberKeyPress"
            android:tag="2"
            android:text="@string/_2"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_0"
            app:layout_constraintEnd_toStartOf="@+id/btn_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_1"
            app:layout_constraintTop_toBottomOf="@+id/btn_5" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:onClick="numberKeyPress"
            android:tag="3"
            android:text="@string/_3"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_dot"
            app:layout_constraintEnd_toStartOf="@+id/btn_minus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_2"
            app:layout_constraintTop_toBottomOf="@+id/btn_6" />

        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:onClick="numberKeyPress"
            android:tag="4"
            android:text="@string/_4"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_1"
            app:layout_constraintEnd_toStartOf="@+id/btn_5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_7" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:onClick="numberKeyPress"
            android:tag="5"
            android:text="@string/_5"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_2"
            app:layout_constraintEnd_toStartOf="@+id/btn_6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_4"
            app:layout_constraintTop_toBottomOf="@+id/btn_8" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:onClick="numberKeyPress"
            android:tag="6"
            android:text="@string/_6"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_3"
            app:layout_constraintEnd_toStartOf="@+id/btn_plus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_5"
            app:layout_constraintTop_toBottomOf="@+id/btn_9" />

        <Button
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:onClick="numberKeyPress"
            android:tag="7"
            android:text="@string/_7"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_4"
            app:layout_constraintEnd_toStartOf="@+id/btn_8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_clear" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:onClick="numberKeyPress"
            android:tag="8"
            android:text="@string/_8"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_5"
            app:layout_constraintEnd_toStartOf="@+id/btn_9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_7"
            app:layout_constraintTop_toBottomOf="@+id/btn_history" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:onClick="numberKeyPress"
            android:tag="9"
            android:text="@string/_9"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_6"
            app:layout_constraintEnd_toStartOf="@+id/btn_divide"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_8"
            app:layout_constraintTop_toBottomOf="@+id/btn_backspace" />

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:onClick="numberKeyPress"
            android:text="@string/_dot"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_equal"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_0"
            app:layout_constraintTop_toBottomOf="@+id/btn_3" />

        <Button
            android:id="@+id/btn_plusminus"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:onClick="numberKeyPress"
            android:text="@string/_plusminus"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>